--- a/package.json
+++ b/package.json
@@ -1,31 +1,40 @@
 {
-  "name": "chat-vol2",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "chat-vol2",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "css-loader": "^3.2.0",
+        "express": "^4.17.1",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-hot-loader": "^4.12.18",
+        "react-scripts": "3.2.0",
+        "socket.io": "^2.3.0",
+        "style-loader": "^1.0.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "start:server": "node index.js",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "socket.io-client": "^2.3.0"
+    }
 }
